refactor: remove unused IDE scripts, streamline main.js, and enhance animations for better performance

--- a/exercises.html
+++ b/exercises.html
@@ -4,115 +4,84 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>WeCode | Exercises</title>
-
-  <!-- style.css (מעודכן, הגרסה הסמי‑דארק המשודרגת) -->
   <link rel="stylesheet" href="styles/style.css">
-  <!-- animations.css (המורחב) -->
   <link rel="stylesheet" href="styles/animations.css">
-  
-  <!-- (אופציונלי) AOS animate on scroll, אם משתמשים בזה גם כאן -->
-  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" /> -->
 </head>
-<body class="page-exercises">
-  <!-- רקע עדין SVG -->
-  <div class="bg-wave"></div>
-
-  <header>
-    <div class="nav-container">
-      <!-- המבורגר צף -->
-      <div class="menu-toggle" id="menuToggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-      <ul class="nav-menu" id="navMenu">
-        <li><a href="index.html" class="nav-link">Home</a></li>
-        <li><a href="progress.html" class="nav-link">Progress</a></li>
-        <li><a href="resources.html" class="nav-link">Resources</a></li>
-        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-      </ul>
-      <button id="theme-toggle" class="theme-btn">Switch Theme</button>
+<body class="page-exercises fade-in">
+<header>
+  <div class="nav-container">
+    <div class="menu-toggle" id="menuToggle">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
     </div>
-  </header>
+    <ul class="nav-menu" id="navMenu">
+      <li><a href="index.html" class="nav-link">Home</a></li>
+      <li><a href="progress.html" class="nav-link">Progress</a></li>
+      <li><a href="resources.html" class="nav-link">Resources</a></li>
+      <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+      <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+    </ul>
+  </div>
+</header>
 
-  <main class="page-content fade-in">
-    <h1 style="margin-bottom:0.8em;">Advanced C++ Interview Syllabus</h1>
-    <p style="max-width:800px; margin:0 auto 30px; text-align:center;">
-      Explore the modules below for hands‑on lessons, interactive timelines,
-      real‑world tasks, and integrated code practice.
-    </p>
+<main class="page-content">
+  <h1 class="fancy-title">Advanced C++ Interview Syllabus</h1>
+  <p style="max-width:800px; margin:0 auto 30px; text-align:center;">
+    Explore the modules below for hands-on lessons, interactive timelines,
+    real-world tasks, and integrated code practice.
+  </p>
 
-    <!-- הצגת המודולים 1..7 בקובץ אחד, עם סגנונות מתקדמים -->
-    <section style="display:flex; flex-wrap:wrap; gap:20px; justify-content:center;">
-      <!-- Module 1 Card -->
-      <div class="course-module glass card-hover floating-card zoom-in" style="width:300px; text-align:center;">
-        <h2>Module 1: Foundations &amp; Modern C++</h2>
-        <p>RAII, smart pointers, lambdas, and best practices.</p>
-        <a href="module1.html" class="btn">Go to Module 1</a>
-      </div>
+  <!-- Module List -->
+  <section style="display:flex; flex-wrap:wrap; gap:20px; justify-content:center;">
+    <div class="course-module glass card-hover tilt-card" style="width:300px; text-align:center;">
+      <h2>Module 1: Foundations &amp; Modern C++</h2>
+      <p>RAII, smart pointers, lambdas, and best practices.</p>
+      <a href="module1.html" class="btn">Go to Module 1</a>
+    </div>
 
-      <!-- Module 2 Card -->
-      <div class="course-module glass card-hover floating-card flip-card" style="width:300px; text-align:center;">
-        <h2>Module 2: Data Structures &amp; Algorithms</h2>
-        <p>Arrays, linked lists, trees, sorting, searching, BFS/DFS, etc.</p>
-        <a href="module2.html" class="btn">Go to Module 2</a>
-      </div>
+    <div class="course-module glass card-hover tilt-card" style="width:300px; text-align:center;">
+      <h2>Module 2: Data Structures &amp; Algorithms</h2>
+      <p>Arrays, linked lists, trees, sorting, searching, BFS/DFS, etc.</p>
+      <a href="module2.html" class="btn">Go to Module 2</a>
+    </div>
 
-      <!-- Module 3 Card -->
-      <div class="course-module glass card-hover floating-card" style="width:300px; text-align:center;"
-           data-aos="zoom-in" data-aos-delay="200">
-        <h2>Module 3: Real‑Time &amp; Embedded</h2>
-        <p>RTOS fundamentals, interrupts, debugging, concurrency in embedded.</p>
-        <a href="module3.html" class="btn">Go to Module 3</a>
-      </div>
+    <div class="course-module glass card-hover tilt-card" style="width:300px; text-align:center;">
+      <h2>Module 3: Real-Time &amp; Embedded</h2>
+      <p>RTOS fundamentals, interrupts, debugging, concurrency in embedded.</p>
+      <a href="module3.html" class="btn">Go to Module 3</a>
+    </div>
 
-      <!-- Module 4 Card -->
-      <div class="course-module glass card-hover floating-card" style="width:300px; text-align:center;"
-           data-aos="zoom-in" data-aos-delay="400">
-        <h2>Module 4: Concurrency &amp; Multithreading</h2>
-        <p>Threads, mutexes, lock‑free, concurrency patterns in modern C++.</p>
-        <a href="module4.html" class="btn">Go to Module 4</a>
-      </div>
+    <div class="course-module glass card-hover tilt-card" style="width:300px; text-align:center;">
+      <h2>Module 4: Concurrency &amp; Multithreading</h2>
+      <p>Threads, mutexes, lock-free, concurrency patterns in modern C++.</p>
+      <a href="module4.html" class="btn">Go to Module 4</a>
+    </div>
 
-      <!-- Module 5 Card -->
-      <div class="course-module glass card-hover floating-card" style="width:300px; text-align:center;"
-           data-aos="zoom-in" data-aos-delay="600">
-        <h2>Module 5: Memory &amp; Debugging</h2>
-        <p>Manual vs. smart pointers, custom allocators, debugging tools.</p>
-        <a href="module5.html" class="btn">Go to Module 5</a>
-      </div>
+    <div class="course-module glass card-hover tilt-card" style="width:300px; text-align:center;">
+      <h2>Module 5: Memory &amp; Debugging</h2>
+      <p>Manual vs. smart pointers, custom allocators, debugging tools.</p>
+      <a href="module5.html" class="btn">Go to Module 5</a>
+    </div>
 
-      <!-- Module 6 Card -->
-      <div class="course-module glass card-hover floating-card" style="width:300px; text-align:center;"
-           data-aos="zoom-in" data-aos-delay="800">
-        <h2>Module 6: Templates &amp; Metaprogramming</h2>
-        <p>SFINAE, type traits, compile‑time programming techniques.</p>
-        <a href="module6.html" class="btn">Go to Module 6</a>
-      </div>
+    <div class="course-module glass card-hover tilt-card" style="width:300px; text-align:center;">
+      <h2>Module 6: Templates &amp; Metaprogramming</h2>
+      <p>SFINAE, type traits, compile-time programming techniques.</p>
+      <a href="module6.html" class="btn">Go to Module 6</a>
+    </div>
 
-      <!-- Module 7 Card -->
-      <div class="course-module glass card-hover floating-card" style="width:300px; text-align:center;"
-           data-aos="zoom-in" data-aos-delay="1000">
-        <h2>Module 7: System Design &amp; Advanced</h2>
-        <p>Design patterns, high‑level architecture, scalable interview scenarios.</p>
-        <a href="module7.html" class="btn">Go to Module 7</a>
-      </div>
-    </section>
-  </main>
+    <div class="course-module glass card-hover tilt-card" style="width:300px; text-align:center;">
+      <h2>Module 7: System Design &amp; Advanced</h2>
+      <p>Design patterns, high-level architecture, scalable interview scenarios.</p>
+      <a href="module7.html" class="btn">Go to Module 7</a>
+    </div>
+  </section>
+</main>
 
-  <footer>
-    <p>© 2025 WeCode. All rights reserved.</p>
-  </footer>
+<footer></footer>
+<p>© 2025 WeCode. All rights reserved.</p>
+<button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 
-  <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
-  
-  <!-- Scripts -->
-  <script src="scripts/main.js"></script>
-  <!-- AOS (אופציונלי) -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-  <script>
-    AOS.init({duration:800,once:false});
-  </script> -->
+<script src="scripts/main.js"></script>
 </body>
 </html>
