--- a/module1.html
+++ b/module1.html
@@ -8,82 +8,73 @@
   <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body class="page-module fade-in">
-  <div class="bg-wave"></div>
-
-  <header>
-    <div class="nav-container">
-      <div class="menu-toggle" id="menuToggle">
-        <span class="bar"></span><span class="bar"></span><span class="bar"></span>
-      </div>
-      <ul class="nav-menu" id="navMenu">
-        <li><a href="index.html" class="nav-link">Home</a></li>
-        <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-        <li><a href="progress.html" class="nav-link">Progress</a></li>
-        <li><a href="resources.html" class="nav-link">Resources</a></li>
-        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-      </ul>
+<header>
+  <div class="nav-container">
+    <div class="menu-toggle" id="menuToggle">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
     </div>
-  </header>
+    <ul class="nav-menu" id="navMenu">
+      <li><a href="index.html" class="nav-link">Home</a></li>
+      <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+      <li><a href="progress.html" class="nav-link">Progress</a></li>
+      <li><a href="resources.html" class="nav-link">Resources</a></li>
+      <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+      <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+    </ul>
+  </div>
+</header>
 
-  <main class="page-content">
-    <div class="breadcrumb">
-      <a href="index.html">Home</a> <span>&gt;</span>
-      <a href="exercises.html">Exercises</a> <span>&gt;</span>
-      <span>Module 1</span>
+<main class="page-content">
+  <div class="breadcrumb">
+    <a href="index.html">Home</a> <span>&gt;</span>
+    <a href="exercises.html">Exercises</a> <span>&gt;</span>
+    <span>Module 1</span>
+  </div>
+
+  <section class="glass module-lessons tilt-card">
+    <h1 class="fancy-title">Module 1: Foundations &amp; Modern C++</h1>
+    <p>This module covers essential modern C++ techniques—including RAII, smart pointers, and lambdas.</p>
+
+    <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
+    <div class="module-timeline" id="moduleTimeline">
+      <div class="timeline-step">Step 1: RAII Overview</div>
+      <div class="timeline-step">Step 2: Smart Pointers &amp; Move Semantics</div>
+      <div class="timeline-step">Step 3: Lambdas &amp; STL Algorithms</div>
     </div>
+    <hr>
 
-    <section class="glass module-lessons">
-      <h1>Module 1: Foundations &amp; Modern C++</h1>
-      <p>This module covers essential modern C++ techniques—including RAII, smart pointers, and lambdas.</p>
+    <h2>Lesson 1: RAII &amp; Constructors</h2>
+    <p>Create a <code>FileWrapper</code> class that opens a file in its constructor and closes it in the destructor, handling errors gracefully.</p>
+    <button class="btn" onclick="openExternalIDE('M1L1')">Open IDE for Lesson 1</button>
+    <hr>
 
-      <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
-      <div class="module-timeline" id="moduleTimeline">
-        <div class="timeline-step">Step 1: RAII Overview</div>
-        <div class="timeline-step">Step 2: Smart Pointers &amp; Move Semantics</div>
-        <div class="timeline-step">Step 3: Lambdas &amp; STL Algorithms</div>
-      </div>
-      <hr>
+    <h2>Lesson 2: Smart Pointers &amp; Move Semantics</h2>
+    <p>Use <code>std::unique_ptr</code>, <code>std::shared_ptr</code>, and move semantics to manage resources effectively, avoiding leaks.</p>
+    <button class="btn" onclick="openExternalIDE('M1L2')">Open IDE for Lesson 2</button>
+    <hr>
 
-      <div style="text-align:center; margin:20px 0;">
-        <img src="assets/images/module1_diagram.png" alt="RAII Diagram" style="max-width:400px; border-radius:8px;">
-        <p style="font-size:0.9rem; color:#ccc;"><em>Figure: RAII Diagram</em></p>
-      </div>
+    <h2>Lesson 3: Lambdas &amp; STL Algorithms</h2>
+    <p>Leverage lambdas for concise code with STL (e.g., <code>std::remove_if</code>) and explore different capture modes.</p>
+    <button class="btn" onclick="openExternalIDE('M1L3')">Open IDE for Lesson 3</button>
+  </section>
+</main>
 
-      <h2>Lesson 1: RAII &amp; Constructors</h2>
-      <p>Create a <code>FileWrapper</code> class that opens a file in its constructor and closes it in the destructor, handling errors gracefully.</p>
-      <button class="btn" onclick="openExternalIDE('M1L1')">Open IDE for Lesson 1</button>
+<footer></footer>
+<p>© 2025 WeCode. All rights reserved.</p>
+<button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 
-      <hr>
-      <h2>Lesson 2: Smart Pointers &amp; Move Semantics</h2>
-      <p>Use <code>std::unique_ptr</code>, <code>std::shared_ptr</code>, and move semantics to manage resources effectively, avoiding leaks.</p>
-      <button class="btn" onclick="openExternalIDE('M1L2')">Open IDE for Lesson 2</button>
-
-      <hr>
-      <h2>Lesson 3: Lambdas &amp; STL Algorithms</h2>
-      <p>Leverage lambdas for concise code with STL (e.g., <code>std::remove_if</code>) and explore different capture modes.</p>
-      <button class="btn" onclick="openExternalIDE('M1L3')">Open IDE for Lesson 3</button>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2025 WeCode. All rights reserved.</p>
-  </footer>
-
-  <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
-
-  <!-- Scripts -->
-  <script src="scripts/main.js"></script>
-  <script>
-    function toggleTimeline() {
-      const timeline = document.getElementById("moduleTimeline");
-      if(timeline) timeline.classList.toggle("show");
-    }
-    function openExternalIDE(lessonID) {
-      // using getWandboxLink from main.js
-      const url = getWandboxLink(lessonID);
-      window.open(url, "_blank");
-    }
-  </script>
+<script src="scripts/main.js"></script>
+<script>
+function toggleTimeline() {
+  const timeline = document.getElementById("moduleTimeline");
+  if(timeline) timeline.classList.toggle("show");
+}
+function openExternalIDE(lessonID) {
+  const url = getWandboxLink(lessonID);
+  window.open(url, "_blank");
+}
+</script>
 </body>
 </html>
